...
        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitleDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTitleDetail"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtTitleDetail"
...
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgDetail" />

        <TextView
            android:id="@+id/txtDescriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/example_description"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
...
